// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render "bad code setting" explanation: no link 1`] = `
<div
  className="display-flex-center display-flex-justify-center"
  style={
    Object {
      "height": 500,
    }
  }
>
  <img
    alt=""
    className="spacer-right"
    height={52}
    src="/images/source-code.svg"
  />
  <div
    className="big-spacer-left text-muted"
    style={
      Object {
        "maxWidth": 500,
      }
    }
  >
    <p
      className="spacer-bottom big-spacer-top big"
    >
      overview.measures.bad_reference.explanation
    </p>
    <p>
      <FormattedMessage
        defaultMessage="overview.measures.empty_link"
        id="overview.measures.empty_link"
        values={
          Object {
            "learn_more_link": <Link
              to="/documentation/user-guide/clean-as-you-code/"
            >
              learn_more
            </Link>,
          }
        }
      />
    </p>
  </div>
</div>
`;

exports[`should render "bad code setting" explanation: with link 1`] = `
<div
  className="display-flex-center display-flex-justify-center"
  style={
    Object {
      "height": 500,
    }
  }
>
  <img
    alt=""
    className="spacer-right"
    height={52}
    src="/images/source-code.svg"
  />
  <div
    className="big-spacer-left text-muted"
    style={
      Object {
        "maxWidth": 500,
      }
    }
  >
    <p
      className="spacer-bottom big-spacer-top big"
    >
      overview.measures.bad_reference.explanation
    </p>
    <p>
      <FormattedMessage
        defaultMessage="overview.measures.empty_link"
        id="overview.measures.empty_link"
        values={
          Object {
            "learn_more_link": <Link
              to="/documentation/user-guide/clean-as-you-code/"
            >
              learn_more
            </Link>,
          }
        }
      />
    </p>
  </div>
</div>
`;

exports[`should render the default message 5`] = `
<div
  className="display-flex-center display-flex-justify-center"
  style={
    Object {
      "height": 500,
    }
  }
>
  <img
    alt=""
    className="spacer-right"
    height={52}
    src="/images/source-code.svg"
  />
  <div
    className="big-spacer-left text-muted"
    style={
      Object {
        "maxWidth": 500,
      }
    }
  >
    <p
      className="spacer-bottom big-spacer-top big"
    >
      overview.measures.same_reference.explanation
    </p>
  </div>
</div>
`;

exports[`should render the default message 6`] = `
<div
  className="display-flex-center display-flex-justify-center"
  style={
    Object {
      "height": 500,
    }
  }
>
  <img
    alt=""
    className="spacer-right"
    height={52}
    src="/images/source-code.svg"
  />
  <div
    className="big-spacer-left text-muted"
    style={
      Object {
        "maxWidth": 500,
      }
    }
  >
    <p
      className="spacer-bottom big-spacer-top big"
    >
      overview.measures.bad_reference.explanation
    </p>
    <p>
      <FormattedMessage
        defaultMessage="overview.measures.empty_link"
        id="overview.measures.empty_link"
        values={
          Object {
            "learn_more_link": <Link
              to="/documentation/user-guide/clean-as-you-code/"
            >
              learn_more
            </Link>,
          }
        }
      />
    </p>
  </div>
</div>
`;
